kubernetes/apps/database/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: database-allow
spec:
  endpointSelector: {}
  ingress:
    # security namespace (authentik, keycloak) consumes postgres + dragonfly.
    # Extend this list as more namespaces are onboarded to NetworkPolicy.
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: security
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "6379"
              protocol: TCP
